frontend : fix flex spacing.
address now gets 4 * the space of the other columns, as a sideeffect
the UPRN header lines up now, everything looks tidyer and straighter

--- a/frontend/src/css/resultheader.css
+++ b/frontend/src/css/resultheader.css
@@ -12,12 +12,17 @@
   align-self: center;
   width: 100%;
   padding: 0.3em;
+  flex: 1;
 }
 
 .header-item.uprn {
   font-size: 1.1em;
   padding-right: 10px;
   width: max-content;
+}
+
+.header-item.address {
+  flex: 4;
 }
 
 .header-item.link {
