--- a/frontend/src/css/resultitem.css
+++ b/frontend/src/css/resultitem.css
@@ -26,6 +26,7 @@
   align-self: center;
   width: 100%;
   padding: 0.3em;
+  flex: 1;
 }
 
 .result.uprn {
@@ -36,6 +37,8 @@
 
 .result.address {
   text-align: left;
+  flex-shrink: 0;
+  flex: 4;
 }
 
 .result.link {
